force-app/main/default/objects/eCASS02t1__Incoming_Referral__c/fields/Default_Client_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Client_Account_Contact__c</fullName>
    <formula>eCASS02t1__Client_Household__r.PersonContactId</formula>
    <label>Default Client Account Contact</label>
    <type>Text</type>
</CustomField>