force-app/main/default/objects/eCASS02t1__Incoming_Referral__c/fields/Default_Referred_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Referred_From_Contact__c</fullName>
    <formula>Referred_From_Person_Account__r.PersonContactId</formula>
    <label>Default Referred From Contact</label>
    <type>Text</type>
</CustomField>