force-app/main/default/objects/eCASS02t1__Incoming_Referral__c/fields/Person_Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Name_Formula__c</fullName>
    <formula>LEFT(
   &apos;INC-&apos; +
      BLANKVALUE(
         eCASS02t1__Client_Household__r.PersonContact.eCASS02t1__Full_name__c,
         BLANKVALUE(
            eCASS02t1__Client__r.eCASS02t1__Full_name__c,
            eCASS02t1__Client_Household__r.Name
         )
         
      )
      + &apos;-&apos; + eCASS02t1__Formatted_Date_Time_Opened__c,
    80
)</formula>
    <label>Person Account Name Formula</label>
    <type>Text</type>
</CustomField>