force-app/main/default/objects/eCASS02t1__Incoming_Referral__c/fields/Referred_From_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_From_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred From Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incoming Referrals (Referred From Person Account)</relationshipLabel>
    <relationshipName>Incoming_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>